Implementation of StorageEngineLockFile on posix systems leaks file descriptors

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.1.1
    • Affects Version/s: None
    • Component/s: Storage
    • None
    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The destructor of StorageEngineLockFile on posix systems doesn't close the lock file's file handle, leaking it. We don't normally notice, because we usually only release the handle at shutdown, but it can be noticed in unit tests that start up and shut down the storage engine repeatedly.

            Assignee:
            Andy Schwerin (Inactive)
            Reporter:
            Andy Schwerin (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: