SERVER-35068 Properly release file descriptor in destructor of StorageEngineLockFile.